# tiled-parser-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build-main.yml  build-staging.yml  code-coverage.yml  unit-test-main.yml  unit-test-staging.yml
src/: data.rs  errors.rs  lib.rs
tests/: simple_map_tests.rs
tests/data/simple-tileset/: simple-map-b64-gzip.tmx  simple-map-b64-zlib.tmx  simple-map-b64-zstd.tmx  simple-map-b64.tmx  simple-map.tmx  simple.tsx
